--- a/css/apply-forUs.css
+++ b/css/apply-forUs.css
@@ -1,20 +1,9 @@
-@charset "UTF-8";
 main {
-  line-height: 1.5;
-  padding-bottom: 4.565vw;
+  line-height: 1.75;
 }
 
 main .top-bj img {
   width: 100%;
-}
-
-main .content-main {
-  padding: 2.9167vw 0 1.771vw;
-}
-
-main .content-main .content-title {
-  color: #0166C0;
-  text-align: center;
 }
 
 main .application-content {
@@ -154,193 +143,131 @@ main .financially .financially-main .financially-item li .financially-title {
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-main .growUp .growUp-main .growUp-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+main .growUp {
+  padding-top: 2.6042vw;
 }
 
-main .growUp .growUp-main .growUp-item .item-list {
-  position: relative;
-  width: 32.41%;
-  background: #FFFFFF;
-  border: 1px solid #707070;
-  font-optical-sizing: 0.71;
+main .growUp .growUp-title {
+  text-align: center;
+}
+
+main .growUp .growUp-item {
+  margin-top: 2.552vw;
+}
+
+main .growUp .growUp-item li {
+  width: 32.307692%;
+  border: 1px solid rgba(112, 112, 112, 0.71);
   border-radius: 5px;
-  height: 21.875;
 }
 
-main .growUp .growUp-main .growUp-item .item-list ul {
-  padding: 1vw 2vw 29px 3vw;
+main .growUp .growUp-item li .text-desc {
+  margin: 1.4062vw 0.9375vw;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
-main .growUp .growUp-main .growUp-item .item-list ul li {
-  position: relative;
-  height: 10vw;
+main .growUp .growUp-item li .zhengfangxing {
+  display: inline-block;
+  margin-top: 5px;
+  width: 12px;
+  height: 12px;
+  background: #090909;
 }
 
-main .growUp .growUp-main .growUp-item .item-list ul li .item-title {
-  font-size: 0.9375vw;
-  font-weight: 500;
-  padding: 4px 0 4px 0;
+main .growUp .growUp-item li .wenzi {
+  max-width: 350px;
+  width: 100%;
+  margin-left: 10px;
 }
 
-main .growUp .growUp-main .growUp-item .item-list ul li .item-text {
-  font-size: 0.833vw;
-  line-height: 1.46vw;
+main .growUp .growUp-item li .wenzi .title {
+  margin-bottom: 0.9375vw;
 }
 
-main .growUp .growUp-main .growUp-item .item-list ul li::before {
-  position: absolute;
-  content: "";
-  display: block;
-  width: 10px;
-  height: 10px;
-  background: #000000;
-  /* margin: 0 auto; */
-  left: -25px;
-  top: 7px;
+main .consult {
+  padding: 2.4479vw 0 5.885vw;
 }
 
-main .growUp .growUp-main .growUp-item .item-befter-one::before,
-main .growUp .growUp-main .growUp-item .item-befter-two::before,
-main .growUp .growUp-main .growUp-item .item-befter-three::before {
-  font-size: 2.5vw;
-  position: absolute;
-  font-weight: 500;
-  top: 10%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -40%);
-          transform: translate(-50%, -40%);
+main .consult .consult-title {
+  text-align: center;
+  color: #0266C1;
+  line-height: 1;
+}
+
+main .consult .consult-mian-title {
+  margin: 2.4479vw 0;
+  text-indent: 2em;
+}
+
+main .consult .main-item {
   color: #FFFFFF;
 }
 
-main .growUp .growUp-main .growUp-item .item-befter-one::before {
-  content: "深造";
-}
-
-main .growUp .growUp-main .growUp-item .item-befter-two::before {
-  content: "就业";
-}
-
-main .growUp .growUp-main .growUp-item .item-befter-three::before {
-  content: "出国";
-}
-
-main .growUp .growUp-main .growUp-item .active {
-  display: none;
-}
-
-main .consult .consult-main .consult-title {
-  padding: 0;
-}
-
-main .consult .consult-main .consult-mian-title {
-  text-indent: 30px;
-  /* 设置文本缩进为20像素 */
-  font-size: 0.833vw;
-  margin: 2.604vw auto;
-}
-
-main .consult .consult-main .main-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  color: #FFFFFF;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-main .consult .consult-main .main-item .main-content {
-  width: calc(33% - 10px);
+main .consult .main-item .main-content {
+  width: 32.307692%;
   background: linear-gradient(45deg, #0065C1 0%, #3B92D7 100%);
   border-radius: 5px;
-  padding: 19px 20px 19px 20px;
+  padding: 1.667vw 2.135vw;
 }
 
-main .consult .consult-main .main-item .main-content .main-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 1.5625vw;
+main .consult .main-item .main-content .main-title {
+  text-align: center;
+  line-height: 0.9334;
 }
 
-main .consult .consult-main .main-item .main-content .main-hr {
+main .consult .main-item .main-content .main-hr {
+  margin: 18px 0;
   background-color: rgba(255, 255, 255, 0.25);
 }
 
-main .consult .consult-main .main-item .main-lianxi .main-content-list ul {
-  padding: 19px 20px 0 20px;
-}
-
-main .consult .consult-main .main-item .main-lianxi .main-content-list ul li {
+main .consult .main-item .main-lianxi .main-content-list ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* margin-bottom: 2.083vw; */
-  padding: 10px 0 10px 0;
+  margin-bottom: 2.083vw;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-main .consult .consult-main .main-item .main-lianxi .main-content-list ul li .list-img {
-  display: inline-block;
+main .consult .main-item .main-lianxi .main-content-list ul li:last-child {
+  margin-bottom: 1.074vw;
 }
 
-main .consult .consult-main .main-item .main-lianxi .main-content-list ul li .list-img img {
-  width: 4.635vw;
+main .consult .main-item .main-lianxi .main-content-list ul li .list-text {
+  margin-left: 1.458vw;
 }
 
-main .consult .consult-main .main-item .main-lianxi .main-content-list ul li .list-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-  padding: 0px 0 10px 13px;
-  width: calc;
-  font-size: 12px;
-  width: calc(75%);
-  letter-spacing: .1vw;
-}
-
-main .consult .consult-main .main-item .main-lianxi .main-content-list ul li .list-text p {
-  padding-top: 5px;
-}
-
-main .consult .consult-main .main-item .main-map .main-map-conent {
-  padding: 1.875vw 1.979vw 2.344vw 2.135vw;
-}
-
-main .consult .consult-main .main-item .main-map .main-map-conent p {
-  text-align: center;
-  font-size: 12px;
-}
-
-main .consult .consult-main .main-item .main-map .main-map-conent .map-text-one {
-  font-size: 12px;
-  padding: 5px 0 20px 0;
-}
-
-main .consult .consult-main .main-item .main-map .main-map-conent img {
+main .consult .main-item .main-map .main-map-conent {
+  position: relative;
+  overflow: hidden;
   width: 100%;
   height: 100%;
-  padding: 20px 0 20px 0;
+}
+
+main .consult .main-item .main-map .main-map-conent .addrens {
+  margin: 1.25vw 0;
+  line-height: 2;
+}
+
+main .consult .main-item .main-map .main-map-conent img {
+  width: 100%;
+  height: 100%;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+main .consult .main-item .main-map .main-map-conent:hover img {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+main .consult .main-item .main-map .main-map-conent p {
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -371,6 +298,39 @@ main .consult .consult-main .main-item .main-map .main-map-conent img {
   }
   main .financially .financially-main .financially-item li {
     width: 48%;
+  }
+  main .growUp .growUp-item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .growUp .growUp-item li {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  main .growUp .growUp-item li img {
+    width: 100%;
+  }
+  main .growUp .growUp-item li .text-desc {
+    margin: 2.4062vw 1.9375vw;
+  }
+  main .consult .main-item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .consult .main-item .main-lianxi .main-content-list ul li {
+    margin-bottom: 15px;
+  }
+  main .consult .main-item .main-content {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 26px 12px;
+  }
+  main .consult .main-item .main-content img {
+    width: 100%;
   }
 }
 
@@ -405,5 +365,45 @@ main .consult .consult-main .main-item .main-map .main-map-conent img {
   }
   main .financially .financially-main .financially-item li .financially-title {
     margin-bottom: 20px;
+  }
+  main .growUp {
+    padding-top: 50px;
+  }
+  main .growUp-item {
+    margin-top: 49px;
+  }
+  main .growUp-item li {
+    width: 32.307692%;
+  }
+  main .growUp-item li .text-desc {
+    margin: 27px 18px;
+  }
+  main .growUp-item li .wenzi .title {
+    color: #000;
+    margin-bottom: 0.9375vw;
+  }
+  main .consult {
+    padding: 47px 0 113px;
+  }
+  main .consult .consult-mian-title {
+    margin: 47px 0;
+  }
+  main .consult .main-item .main-content {
+    padding: 32px 41px;
+  }
+  main .consult .main-item .main-lianxi .main-content-list ul li {
+    margin-bottom: 40px;
+  }
+  main .consult .main-item .main-lianxi .main-content-list ul li:last-child {
+    margin-bottom: 21px;
+  }
+  main .consult .main-item .main-lianxi .main-content-list ul li .list-text {
+    margin-left: 28px;
+  }
+  main .consult .main-item .main-map .main-map-conent .addrens {
+    margin: 26.01px 0;
+  }
+  main .consult .main-item .main-map .main-map-conent img {
+    height: 232px;
   }
 }
