--- a/css/about.scss
+++ b/css/about.scss
@@ -3,7 +3,7 @@ main {
 
     // 学院介绍
     .college-content {
-        background: url("../img/about/img.png") left bottom no-repeat;
+        background: url("../img/about/img.png") no-repeat;
         // background-size: 100% 100%;
 
         &::before {
