--- a/css/about.scss
+++ b/css/about.scss
@@ -1,6 +1,10 @@
 main {
     line-height: 1.5;
 
+    .top-nav{
+        display:flex;
+        align-items: center;
+    }
     // 学院介绍
     .college-content {
         background: url("../img/about/img.png") no-repeat;
