--- a/css/apply-forUs.scss
+++ b/css/apply-forUs.scss
@@ -3,10 +3,23 @@ main {
     line-height: 1.75;
 
     .top-bj {
-        img {
-            width: 100%;
+        height: 100vh;
+        background-color: #061E4D;
+        position: relative;
+
+        #cas {
+            position: absolute;
+            left:0;
+            top:0;
+            bottom:0;
+            right:0;
+            margin:auto;
+            width:100%;
+            height:100%;
+            z-index: 0;
         }
     }
+
 
     .application-content {
         margin-top: 2.396vw;
@@ -18,7 +31,6 @@ main {
                 padding: 1.146vw 0;
                 background: linear-gradient(83deg, #0065C0 0%, #3A91D8 100%);
                 color: #FFFFFF;
-
                 text-align: center;
 
                 h3 {
